[[changes]]
== Changes in {project-version}

Built with Spring Boot {spring-boot-version}

=== Bug Fixes
- https://github.com/codecentric/chaos-monkey-spring-boot/pull/252[#252] Update Maven Wrapper from 0.5.5 to 0.5.6.
- https://github.com/codecentric/chaos-monkey-spring-boot/pull/251[#251] Fix missing AssaultPropertiesUpdate validation.
// - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.

=== Improvements
// - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.

=== New Features
 - https://github.com/codecentric/chaos-monkey-spring-boot/pull/241[#239] Added CPU Assault
 - https://github.com/codecentric/chaos-monkey-spring-boot/pull/196[#196] Added bootstrapping method through the system property(`LOAD_CHAOS_MONKEY`).
// - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.

=== Contributors
This release was only possible because of these great humans:

// - https://github.com/octocat[@octocat]

Thank you for your support!