@@ -19,6 +19,8 @@ package de.codecentric.spring.boot.chaos.monkey.endpoints;
 import de.codecentric.spring.boot.chaos.monkey.configuration.ChaosMonkeySettings;
 import de.codecentric.spring.boot.chaos.monkey.configuration.WatcherProperties;
 import de.codecentric.spring.boot.chaos.monkey.endpoints.dto.AssaultPropertiesUpdate;
+import de.codecentric.spring.boot.chaos.monkey.endpoints.dto.ChaosMonkeyDisabledDto;
+import de.codecentric.spring.boot.chaos.monkey.endpoints.dto.ChaosMonkeyEnabledDto;
 import org.springframework.boot.actuate.endpoint.annotation.ReadOperation;
 import org.springframework.boot.actuate.endpoint.annotation.WriteOperation;
 import org.springframework.boot.actuate.endpoint.jmx.annotation.JmxEndpoint;
@@ -76,15 +78,15 @@ public class ChaosMonkeyJmxEndpoint {
   }
 
   @WriteOperation
-  public String enableChaosMonkey() {
+  public ChaosMonkeyEnabledDto enableChaosMonkey() {
     this.chaosMonkeySettings.getChaosMonkeyProperties().setEnabled(true);
-    return "Chaos Monkey is enabled";
+    return new ChaosMonkeyEnabledDto();
   }
 
   @WriteOperation
-  public String disableChaosMonkey() {
+  public ChaosMonkeyDisabledDto disableChaosMonkey() {
     this.chaosMonkeySettings.getChaosMonkeyProperties().setEnabled(false);
-    return "Chaos Monkey is disabled";
+    return new ChaosMonkeyDisabledDto();
   }
 
   @ReadOperation
